--- a/Shopify App/Address/Address/AddressTVCell.xib
+++ b/Shopify App/Address/Address/AddressTVCell.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="addressTVCell" rowHeight="86" id="KGk-i7-Jjw" customClass="AddressTVCell" customModule="Shopify" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="addressTVCell" rowHeight="86" id="KGk-i7-Jjw" customClass="AddressTVCell" customModule="Shopify_App" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="369" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -23,23 +22,9 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HBR-Zj-OvS">
-                        <rect key="frame" x="310.5" y="10" width="42.5" height="31"/>
-                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal" title="Button">
-                            <imageReference key="image" image="pencil" catalog="system" symbolScale="large"/>
-                        </state>
-                        <buttonConfiguration key="configuration" style="plain">
-                            <imageReference key="image" image="pencil" catalog="system" symbolScale="large"/>
-                        </buttonConfiguration>
-                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="LBl-id-41k" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="HBR-Zj-OvS" secondAttribute="leading" id="CKv-M1-2t4"/>
                     <constraint firstItem="LBl-id-41k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="I4E-0m-I0F"/>
-                    <constraint firstAttribute="trailing" secondItem="HBR-Zj-OvS" secondAttribute="trailing" constant="16" id="oci-Z0-ThC"/>
-                    <constraint firstItem="HBR-Zj-OvS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="qM4-cv-woy"/>
                     <constraint firstItem="LBl-id-41k" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="vbS-4S-xLS"/>
                 </constraints>
             </tableViewCellContentView>
@@ -50,7 +35,4 @@
             <point key="canvasLocation" x="196.37681159420291" y="116.18303571428571"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="pencil" catalog="system" width="128" height="113"/>
-    </resources>
 </document>
