--- a/Shopify App/View/Base.lproj/Main.storyboard
+++ b/Shopify App/View/Base.lproj/Main.storyboard
@@ -719,7 +719,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
             <objects>
                 <viewController storyboardIdentifier="AllOrderViewController" id="ojc-g6-y3n" customClass="AllOrderViewController" customModule="Shopify_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Nrt-mM-cvo">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="1KL-yi-X8A">
@@ -782,7 +782,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nmA-g7-j0B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3486" y="-11"/>
+            <point key="canvasLocation" x="4411.4503816793895" y="-11.267605633802818"/>
         </scene>
         <!--SettingsVC-->
         <scene sceneID="VjF-zS-d6m">
@@ -865,7 +865,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v7z-Eu-zht" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5327.480916030534" y="-485.21126760563385"/>
+            <point key="canvasLocation" x="6254.1984732824421" y="-485.21126760563385"/>
         </scene>
         <!--Contact UsVC-->
         <scene sceneID="xpA-4S-Cra">
@@ -896,7 +896,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FY4-hk-aeX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6051.1450381679388" y="-464.08450704225356"/>
+            <point key="canvasLocation" x="6977.8625954198469" y="-464.08450704225356"/>
         </scene>
         <!--Change AddressVC-->
         <scene sceneID="I3s-Jf-wlS">
@@ -990,7 +990,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ANm-Zc-EUz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7543" y="-485"/>
+            <point key="canvasLocation" x="8469.4656488549608" y="-485.21126760563385"/>
         </scene>
         <!--About UsVC-->
         <scene sceneID="uK6-wS-FzD">
@@ -1014,9 +1014,9 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gg9-pF-IDK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6739.6946564885493" y="-464.08450704225356"/>
+            <point key="canvasLocation" x="7666.4122137404574" y="-464.08450704225356"/>
         </scene>
-        <!--Me-->
+        <!--MeVC-->
         <scene sceneID="GLi-Cw-gFa">
             <objects>
                 <viewController id="uKv-mc-jgK" customClass="MeVC" customModule="Shopify_App" customModuleProvider="target" sceneMemberID="viewController">
@@ -1175,7 +1175,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                         <viewLayoutGuide key="safeArea" id="Sbs-aT-ab8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Me" image="person.fill" catalog="system" id="qJ7-bm-ILd"/>
+                    <navigationItem key="navigationItem" id="owQ-eL-2Rb"/>
                     <connections>
                         <outlet property="ordersTable" destination="h08-cP-79R" id="8uf-hq-oLM"/>
                         <outlet property="userWelcome" destination="bMY-i2-zOl" id="U9M-g7-SeO"/>
@@ -1184,7 +1184,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ake-3F-pXI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2793" y="-11"/>
+            <point key="canvasLocation" x="3718.320610687023" y="-11.267605633802818"/>
         </scene>
         <!--Login-->
         <scene sceneID="U7C-X3-pDN">
@@ -1432,7 +1432,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                     <connections>
                         <segue destination="h9M-zN-wcL" kind="relationship" relationship="viewControllers" id="YtO-6a-sBU"/>
                         <segue destination="K0G-1m-Ns6" kind="relationship" relationship="viewControllers" id="rGa-dF-5tG"/>
-                        <segue destination="uKv-mc-jgK" kind="relationship" relationship="viewControllers" id="i6t-Gs-auu"/>
+                        <segue destination="QV3-Bu-ao4" kind="relationship" relationship="viewControllers" id="i6t-Gs-auu"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xiL-n5-mKA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1723,6 +1723,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                         <outlet property="maximumPrice" destination="7xx-iF-WQE" id="ei8-jK-F2Q"/>
                         <outlet property="minimumPrice" destination="Upz-RR-t0i" id="foL-eP-Z9X"/>
                         <outlet property="priceSlider" destination="qOw-h0-erf" id="G6Z-Ar-yKJ"/>
+                        <outlet property="productSearchBar" destination="0Fv-Q6-e0Y" id="Ovm-cU-J7z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1KP-lP-9cz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1956,7 +1957,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zsf-H5-j2u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="GSm-xD-BLr" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="9360" y="-464"/>
+            <point key="canvasLocation" x="10286.259541984733" y="-464.08450704225356"/>
         </scene>
         <!--AddressVC-->
         <scene sceneID="CdW-nc-OZb">
@@ -2133,6 +2134,25 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qln-wg-2uO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="219" y="-1551"/>
+        </scene>
+        <!--Me-->
+        <scene sceneID="Lca-1O-BpX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QV3-Bu-ao4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Me" image="person.fill" catalog="system" id="qJ7-bm-ILd"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Sjx-mK-hDW">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="uKv-mc-jgK" kind="relationship" relationship="rootViewController" id="PoV-TW-TyQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Goc-a3-zqT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2791.6030534351144" y="-11.267605633802818"/>
         </scene>
     </scenes>
     <resources>
